--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Signika+Negative:wght@700&display=swap');
+
+
 .container {
     height: 100vh;
     display: flex;
@@ -11,6 +14,7 @@
     font-size: 85px;
     color: #FFF;
     animation: flipTitle 2s;
+    font-family: 'Signika Negative', sans-serif;
 }
 
 @keyframes flipTitle {
